# titan-aas

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
admin-ui/: index.html  nginx.conf  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/api/: client.ts
admin-ui/src/pages/: Dashboard.tsx  Packages.tsx  Settings.tsx  Shells.tsx  Submodels.tsx
benchmarks/: README.md  compare_basyx.py  docker-compose.benchmark.yml  functional_tests.py  locustfile_comparison.py
benchmarks/data/: benchmark_aas.json  benchmark_submodels.json  generate_test_data.py
charts/titan-aas/: Chart.yaml  values.yaml
charts/titan-aas/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
config/: modbus_mappings.example.json  opcua_mappings.example.json
dashboard/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
dashboard/e2e/: cache.spec.ts  connectors.spec.ts  database.spec.ts  events.spec.ts  navigation.spec.ts  observability.spec.ts  overview.spec.ts  security.spec.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ErrorState.tsx  LoadingState.tsx  StatCard.tsx
dashboard/src/pages/: Cache.tsx  Connectors.tsx  Database.tsx  Events.tsx  Observability.tsx  Overview.tsx  Security.tsx
deployment/: .env.example  Dockerfile  Dockerfile.admin  docker-compose.test.yml  docker-compose.yml  mosquitto.conf
deployment/alertmanager/: alertmanager.dev.yml  alertmanager.yml
deployment/prometheus/: prometheus.yml
deployment/prometheus/alerts/: titan-aas.yml
docs/: ARCHITECTURE.md  aasx-packages.md  api-guide.md  benchmarks.md  capacity-planning.md  compliance_combined.csv  compliance_gaps.csv  compliance_matrix.csv  compliance_matrix.yaml  conformance-matrix.md  deployment-runbook.md  graphql-api.md  ha-guidance.md  interop-matrix.md  production-gates.md  production-readiness.md  release-process.md  runbook-quickref.md  security-advisories.md  security-assessment.md  security-modes.md  security.md  try-it-yourself.md
docs/adr/: 0000-template.md  0001-dual-storage-pattern.md  0002-fast-slow-path-routing.md  0003-redis-streams-events.md  0004-redis-leader-election.md  001-dual-observability.md  002-dual-events.md  README.md
scripts/: benchmark.sh  generate-sdk.sh  generate_conformance_report.py  generate_conformance_summary.py
specs/: README.md  checksums.txt
src/titan/: __init__.py  config.py  main.py
src/titan/adapters/: __init__.py
src/titan/api/: app.py  attachment_utils.py  deps.py  errors.py  middleware.py  operation_utils.py  pagination.py  responses.py  routing.py  submodel_update_utils.py  versioning.py
src/titan/cache/: __init__.py  invalidation.py  keys.py  redis.py
src/titan/cli/: __init__.py  export_cmd.py  import_cmd.py  serve.py  validate_cmd.py
src/titan/compat/: __init__.py  aasx.py  xml_serializer.py
src/titan/connectors/: __init__.py  mqtt.py  mqtt_subscriber.py
src/titan/core/: canonicalize.py  element_operations.py  ids.py  operation_executor.py  projection.py  templates.py
src/titan/distributed/: __init__.py  leader.py
src/titan/events/: __init__.py  batch_writer.py  bus.py  publisher.py  redis_bus.py  runtime.py  schemas.py  worker.py
src/titan/federation/: __init__.py  conflicts.py  discovery.py  edge.py  peer.py  sync.py
src/titan/graphql/: __init__.py  converters.py  dataloaders.py  schema.py  subscription_manager.py  subscriptions.py
src/titan/integrations/: __init__.py
src/titan/jobs/: __init__.py  queue.py  scheduler.py  tasks.py  worker.py
src/titan/observability/: __init__.py  logging.py  metrics.py  profiling.py  tracing.py
src/titan/persistence/: __init__.py  db.py  registry.py  repositories.py  tables.py
src/titan/plugins/: __init__.py  base.py  hooks.py  loader.py  registry.py
src/titan/security/: __init__.py  abac.py  audit.py  deps.py  oidc.py  rbac.py  signing.py
src/titan/storage/: __init__.py  azure.py  base.py  externalize.py  factory.py  gcs.py  local.py  s3.py
src/titan/tenancy/: __init__.py  context.py  isolation.py  middleware.py
src/titan/validation/: __init__.py  eclass.py  iec_cdd.py  registry.py  vocabulary.py
terraform/: README.md
terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/azure/: cache.tf  database.tf  helm.tf  identity.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/gcp/: cache.tf  database.tf  helm.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf  workload-identity.tf
tests/: __init__.py  conftest.py
tests/compatibility/: __init__.py  test_basyx_compat.py
tests/contract/: __init__.py  conftest.py  ssp_mapping.py  test_openapi.py
tests/e2e/: __init__.py  conftest.py  test_full_workflow.py
tests/integration/: __init__.py  conftest.py  docker_utils.py  test_api.py  test_blob_storage.py  test_cache.py  test_concept_descriptions.py  test_discovery.py  test_event_bus.py  test_federation.py  test_graphql_mutations.py  test_modbus_integration.py  test_mqtt_integration.py  test_opcua_integration.py  test_rate_limit.py  test_registry.py  test_repositories.py  test_security_flows.py  test_submodel_elements.py  test_websocket_events.py
tests/interop/: conftest.py  test_basyx_to_titan.py  test_titan_to_basyx.py
tests/load/: README.md  __init__.py  config_15k.py  locustfile.py
tests/unit/adapters/: test_rdf_exporter.py
tests/unit/api/: test_aasx_server.py  test_aasx_versioning.py  test_dashboard.py  test_errors.py  test_pagination.py  test_projection.py  test_routing.py  test_security_headers.py  test_template_instantiation.py  test_versioning.py
tests/unit/cache/: test_keys.py
tests/unit/compat/: test_aasx.py  test_xml_serializer.py
tests/unit/connectors/: test_modbus.py  test_mqtt.py  (+9 more)
(+125 files in other folders)
