[project]
name = "titan-aas"
version = "0.1.0"
description = "Industrial Asset Administration Shell runtime optimized for read-heavy workloads"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Titan AAS" }
]
license = { file = "LICENSE" }

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "orjson>=3.10",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "aiofiles>=23.2",
  "aiomqtt>=2.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "strawberry-graphql[fastapi]>=0.288.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "schemathesis>=3.32",
  "httpx>=0.27",
]
compression = [
  "brotli>=1.1",
]
gcs = [
  "google-cloud-storage>=2.16",
]
azure = [
  "azure-storage-blob>=12.19",
]

[project.scripts]
titan = "titan.main:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "aioboto3",
  "azure",
  "azure.*",
  "alembic",
  "alembic.*",
  "brotli",
  "google",
  "google.*",
  "google.cloud",
  "google.cloud.*",
  "jose",
  "jose.*",
  "opentelemetry.instrumentation.httpx",
  "opentelemetry.instrumentation.redis",
  "opentelemetry.instrumentation.sqlalchemy",
  "prometheus_client",
  "prometheus_client.*",
  "yaml",
  "yaml.*",
  "strawberry",
  "strawberry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "titan.api.middleware.security_headers",
  "titan.api.routers.aasx",
  "titan.api.routers.aas_repository",
  "titan.api.routers.admin",
  "titan.api.routers.submodel_repository",
  "titan.cache.invalidation",
  "titan.core.element_operations",
  "titan.distributed.leader",
  "titan.events.redis_bus",
  "titan.events.schemas",
  "titan.federation",
  "titan.federation.*",
  "titan.graphql.dataloaders",
  "titan.observability.profiling",
  "titan.packages.manager",
  "titan.security.audit",
  "titan.security.deps",
  "titan.tenancy.middleware",
]
ignore_errors = true  # New modules under active development

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
    "ignore:Cannot update undefined schema for \\$ref=.*\\[skipped-discriminator\\]:pydantic.json_schema.PydanticJsonSchemaWarning",
]

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "testcontainers>=4.14.0",
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "schemathesis>=3.32",
    "locust>=2.29",
    "boto3>=1.34",
    "aioboto3>=13.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
