[project]
name = "titan-aas"
version = "0.1.0"
description = "Industrial Asset Administration Shell runtime optimized for read-heavy workloads"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Titan AAS" }
]
license = { file = "LICENSE" }

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "uvloop>=0.19.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "orjson>=3.10",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "aiofiles>=23.2",
  "aiomqtt>=2.0",
  "asyncua>=1.1.5",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "strawberry-graphql[fastapi]>=0.288.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "schemathesis>=3.32",
  "httpx>=0.27",
]
compression = [
  "brotli>=1.1",
]
gcs = [
  "google-cloud-storage>=2.16",
]
azure = [
  "azure-storage-blob>=12.19",
]

[project.scripts]
titan = "titan.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "C",   # mccabe complexity
  "S",   # bandit security
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "B008",  # Depends() in function defaults is valid FastAPI pattern
  "B017",  # assert blind exception is ok in tests
  "B904",  # raise from in except is optional for simple re-raises
  "C901",  # complexity is allowed for complex business logic
  "S101",  # assert allowed in tests
  "S104",  # hardcoded bind all interfaces (intentional for containers)
  "S105",  # hardcoded password strings in tests and audit enums
  "S108",  # /tmp usage intentional for job outputs
  "S110",  # try-except-pass allowed for cleanup in tests
  "S112",  # try-except-continue allowed for skipping invalid items
  "S314",  # XML parsing from validated AASX packages is safe
  "S603",  # subprocess allowed in controlled E2E tests
  "S607",  # partial path for subprocess allowed in E2E tests
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S311", "S105"]  # Pseudo-random and test secrets are fine

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "aioboto3",
  "asyncua",
  "asyncua.*",
  "azure",
  "azure.*",
  "alembic",
  "alembic.*",
  "brotli",
  "google",
  "google.*",
  "google.cloud",
  "google.cloud.*",
  "jose",
  "jose.*",
  "opentelemetry.instrumentation.httpx",
  "opentelemetry.instrumentation.redis",
  "opentelemetry.instrumentation.sqlalchemy",
  "prometheus_client",
  "prometheus_client.*",
  "yaml",
  "yaml.*",
  "strawberry",
  "strawberry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "titan.api.middleware.security_headers",
  "titan.api.routers.aasx",
  "titan.api.routers.aas_repository",
  "titan.api.routers.admin",
  "titan.api.routers.submodel_repository",
  "titan.cache.invalidation",
  "titan.core.element_operations",
  "titan.distributed.leader",
  "titan.events.redis_bus",
  "titan.events.schemas",
  "titan.federation",
  "titan.federation.*",
  "titan.graphql.dataloaders",
  "titan.observability.profiling",
  "titan.packages.manager",
  "titan.security.audit",
  "titan.security.deps",
  "titan.tenancy.middleware",
]
ignore_errors = true  # New modules under active development

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Use xunit2 format to include user_properties (SSP markers) in JUnit XML
junit_family = "xunit2"

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "testcontainers>=4.14.0",
    "paho-mqtt>=1.6.1",
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "schemathesis>=3.32",
    "locust>=2.29",
    "boto3>=1.34",
    "aioboto3>=13.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
